POWR-733 add roles, config, templates, etc

--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -3,9 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_audience
+    - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_page_type
+    - field.field.node.page.field_related_content
+    - field.field.node.page.field_reviewer
     - field.field.node.page.field_summary
+    - field.field.node.page.field_topics
     - node.type.page
   module:
+    - chosen_field
     - content_moderation
     - maxlength
     - path
@@ -16,12 +23,50 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_summary:
+  field_audience:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
+  field_legacy_path:
+    weight: 6
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_page_type:
     weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_related_content:
+    weight: 5
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_reviewer:
+    weight: 11
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: entity_reference_autocomplete
+    region: content
+  field_summary:
+    weight: 4
     settings:
       rows: 2
       placeholder: ''
@@ -33,31 +78,23 @@ content:
         maxlength_js_truncate_html: true
     type: string_textarea
     region: content
+  field_topics:
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: chosen_select
+    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 6
+    weight: 12
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    weight: 8
-    region: content
-    settings:
-      display_label: true
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
     weight: 7
     region: content
+    settings: {  }
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -72,17 +109,19 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 9
+    region: content
     settings:
       match_operator: CONTAINS
       size: 60
       placeholder: ''
-    region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 5
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  promote: true
+  status: true
   sticky: true
