--- a/web/sites/default/config/field.field.node.city_service.field_audience.yml
+++ b/web/sites/default/config/field.field.node.city_service.field_audience.yml
@@ -17,7 +17,7 @@ field_name: field_audience
 entity_type: node
 bundle: city_service
 label: Audience
-description: ''
+description: 'Choose 1 or 2 audiences that would most likely use this service. (Optional)'
 required: false
 translatable: false
 default_value: {  }
