--- a/web/sites/default/config/field.field.node.page.field_topics.yml
+++ b/web/sites/default/config/field.field.node.page.field_topics.yml
@@ -1,10 +1,10 @@
-uuid: 6cdb0b38-cce7-45e8-94b4-f1a4b1fd7be9
+uuid: 54d3a38a-300e-46fc-b1bc-f243b6be9a39
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_topics
-    - node.type.city_service
+    - node.type.page
     - taxonomy.vocabulary.topics
   module:
     - custom_add_another
@@ -12,14 +12,14 @@ third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.city_service.field_topics
+id: node.page.field_topics
 field_name: field_topics
 entity_type: node
-bundle: city_service
+bundle: page
 label: Topics
-description: 'Choose 1-3 topics that best describe this service. (Optional)'
+description: 'Choose 1-3 topics that best describe this page. (Optional)'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
