--- a/web/sites/default/config/group.role.elected_official-member.yml
+++ b/web/sites/default/config/group.role.elected_official-member.yml
@@ -15,54 +15,51 @@ permissions:
   0: 'view group'
   1: 'leave group'
   2: 'access group_node overview'
-  4: 'delete own group_node:news entity'
-  5: 'update any group_node:news entity'
-  6: 'update own group_node:news entity'
-  7: 'view group_node:news entity'
-  8: 'view unpublished group_node:news entity'
-  10: 'delete own group_node:guide entity'
-  11: 'update any group_node:guide entity'
-  12: 'update own group_node:guide entity'
-  13: 'view group_node:guide entity'
-  14: 'view unpublished group_node:guide entity'
-  16: 'delete own group_node:information entity'
-  17: 'update any group_node:information entity'
-  18: 'update own group_node:information entity'
-  19: 'view group_node:information entity'
-  20: 'view unpublished group_node:information entity'
-  22: 'delete own group_node:event entity'
-  23: 'update any group_node:event entity'
-  24: 'update own group_node:event entity'
-  25: 'view group_node:event entity'
-  26: 'view unpublished group_node:event entity'
-  27: 'create group_node:notification entity'
-  29: 'delete own group_node:notification entity'
-  30: 'update any group_node:notification entity'
-  31: 'update own group_node:notification entity'
-  32: 'view group_node:notification entity'
-  33: 'view unpublished group_node:notification entity'
-  34: 'access group_media overview'
-  35: 'create group_media:audio entity'
-  37: 'delete own group_media:audio entity'
-  38: 'update any group_media:audio entity'
-  39: 'update own group_media:audio entity'
-  40: 'view group_media:audio entity'
-  41: 'view unpublished group_media:audio entity'
-  42: 'create group_media:document entity'
-  44: 'delete own group_media:document entity'
-  45: 'update any group_media:document entity'
-  46: 'update own group_media:document entity'
-  47: 'view group_media:document entity'
-  48: 'view unpublished group_media:document entity'
-  49: 'create group_media:image entity'
-  51: 'delete own group_media:image entity'
-  52: 'update any group_media:image entity'
-  53: 'update own group_media:image entity'
-  54: 'view group_media:image entity'
-  55: 'view unpublished group_media:image entity'
-  56: 'create group_media:video entity'
-  58: 'delete own group_media:video entity'
-  59: 'update any group_media:video entity'
-  60: 'update own group_media:video entity'
-  61: 'view group_media:video entity'
-  62: 'view unpublished group_media:video entity'
+  3: 'delete own group_node:news entity'
+  4: 'update any group_node:news entity'
+  5: 'update own group_node:news entity'
+  6: 'view group_node:news entity'
+  7: 'view unpublished group_node:news entity'
+  11: 'view group_node:guide entity'
+  16: 'view group_node:information entity'
+  18: 'delete own group_node:event entity'
+  19: 'update any group_node:event entity'
+  20: 'update own group_node:event entity'
+  21: 'view group_node:event entity'
+  22: 'view unpublished group_node:event entity'
+  23: 'create group_node:notification entity'
+  24: 'delete own group_node:notification entity'
+  25: 'update any group_node:notification entity'
+  26: 'update own group_node:notification entity'
+  27: 'view group_node:notification entity'
+  28: 'view unpublished group_node:notification entity'
+  29: 'access group_media overview'
+  30: 'create group_media:audio entity'
+  31: 'delete own group_media:audio entity'
+  32: 'update any group_media:audio entity'
+  33: 'update own group_media:audio entity'
+  34: 'view group_media:audio entity'
+  35: 'view unpublished group_media:audio entity'
+  36: 'create group_media:document entity'
+  37: 'delete own group_media:document entity'
+  38: 'update any group_media:document entity'
+  39: 'update own group_media:document entity'
+  40: 'view group_media:document entity'
+  41: 'view unpublished group_media:document entity'
+  42: 'create group_media:image entity'
+  43: 'delete own group_media:image entity'
+  44: 'update any group_media:image entity'
+  45: 'update own group_media:image entity'
+  46: 'view group_media:image entity'
+  47: 'view unpublished group_media:image entity'
+  48: 'create group_media:video entity'
+  49: 'delete own group_media:video entity'
+  50: 'update any group_media:video entity'
+  51: 'update own group_media:video entity'
+  52: 'view group_media:video entity'
+  53: 'view unpublished group_media:video entity'
+  100: 'delete own group_node:page entity'
+  101: 'update any group_node:page entity'
+  102: 'update own group_node:page entity'
+  103: 'view group_node:page entity'
+  104: 'view unpublished group_node:page entity'
