--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -22,19 +22,16 @@ searched_fields:
   title_1: title_1
 style: view_modes
 view_mode_configuration:
+  'entity:group_project': search_result
   'entity:group_bureau_office': search_result
   'entity:group_elected_official': search_result
   'entity:group_program': search_result
-  'entity:group_project': search_result
-  'entity:node_alert': teaser
-  'entity:node_building': search_result
   'entity:node_city_service': search_result
   'entity:node_event': search_result
   'entity:node_guide': search_result
   'entity:node_information': search_result
   'entity:node_news': search_result
-  'entity:node_notification': teaser
-  'entity:node_service_location': search_result
+  'entity:node_page': search_result
   'entity:taxonomy_term_audience': search_result
   'entity:taxonomy_term_community_actions': search_result
   'entity:taxonomy_term_topics': search_result
