--- a/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__group_menu_block_1.yml
@@ -28,15 +28,15 @@ visibility:
   group_type:
     id: group_type
     group_types:
+      project: project
       bureau_office: bureau_office
       elected_official: elected_official
       program: program
-      project: project
     negate: false
     context_mapping:
       group: '@group.group_route_context:group'
   request_path:
     id: request_path
-    pages: "/group/*/nodes\r\n/group/*/media\r\n/group/*/members"
+    pages: "/group/*/nodes\r\n/group/*/media\r\n/group/*/members\r\n/group/*/node/*\r\n/group/*/content/*\r\n/group/*/content\r\n/group/*/media/*"
     negate: true
     context_mapping: {  }
