--- a/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.city_service.default.yml
@@ -27,7 +27,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -44,7 +44,7 @@ content:
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 15
+    weight: 9
     settings:
       size: 60
       placeholder: ''
@@ -68,7 +68,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 16
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -124,13 +124,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 12
+    weight: 15
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -139,13 +139,6 @@ content:
     weight: 9
     region: content
     settings: {  }
-    third_party_settings: {  }
-  status:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 13
-    region: content
     third_party_settings: {  }
   title:
     type: string_textfield
@@ -160,7 +153,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 9
+    weight: 10
     settings:
       match_operator: CONTAINS
       size: 60
@@ -168,10 +161,11 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
   promote: true
+  status: true
   sticky: true
