--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -3,26 +3,125 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.field.node.page.field_audience
+    - field.field.node.page.field_legacy_path
+    - field.field.node.page.field_page_type
+    - field.field.node.page.field_related_content
+    - field.field.node.page.field_reviewer
     - field.field.node.page.field_summary
+    - field.field.node.page.field_topics
     - node.type.page
   module:
+    - ds
+    - panelizer
     - user
+third_party_settings:
+  panelizer:
+    enable: false
+    custom: false
+    allow: false
+    default: default
+  ds:
+    layout:
+      id: layout_onecol
+      library: layout_discovery/onecol
+      disable_css: false
+      entity_classes: all_classes
+      settings: {  }
+    regions:
+      content:
+        - field_page_type
+        - field_summary
+        - field_related_content
 id: node.page.default
 targetEntityType: node
 bundle: page
 mode: default
 content:
-  field_summary:
-    weight: 101
+  field_page_type:
+    weight: 0
+    label: hidden
+    settings:
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw: true
+            lbw-el: label
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: page-type
+            fi-at: ''
+            suffix: ''
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
+    type: entity_reference_label
+    region: content
+  field_related_content:
+    weight: 2
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_summary:
+    weight: 1
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: ''
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi: true
+            fi-el: p
+            fi-cl: lead
+            fi-at: ''
+            suffix: ''
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi-def-at: false
     type: string
     region: content
-  links:
-    weight: 100
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-hidden: {  }
+hidden:
+  content_moderation_control: true
+  field_audience: true
+  field_legacy_path: true
+  field_reviewer: true
+  field_topics: true
+  links: true
