--- a/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.search_result.yml
@@ -1,9 +1,9 @@
-uuid: a4605546-3aea-47e2-8482-0c0030ae9b10
+uuid: 40a8d950-2251-46ec-8c92-2112d2cc6d5a
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.search_result
     - field.field.node.page.field_audience
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.page.field_topics
     - node.type.page
   module:
+    - ds
     - panelizer
     - user
 third_party_settings:
@@ -21,27 +22,41 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.page.teaser
+id: node.page.search_result
 targetEntityType: node
 bundle: page
-mode: teaser
+mode: search_result
 content:
   field_page_type:
-    type: entity_reference_label
-    weight: 0
-    region: content
+    weight: 1
     label: hidden
     settings:
-      link: true
-    third_party_settings: {  }
-  field_summary:
-    type: string
-    weight: 1
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_label
     region: content
+  field_summary:
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: string
+    region: content
 hidden:
   content_moderation_control: true
   field_audience: true
