--- a/web/sites/default/config/field.field.node.page.field_audience.yml
+++ b/web/sites/default/config/field.field.node.page.field_audience.yml
@@ -1,32 +1,32 @@
-uuid: 6cdb0b38-cce7-45e8-94b4-f1a4b1fd7be9
+uuid: a4d156f4-0c52-489a-bce0-ba5e07d7a913
 langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_topics
-    - node.type.city_service
-    - taxonomy.vocabulary.topics
+    - field.storage.node.field_audience
+    - node.type.page
+    - taxonomy.vocabulary.audience
   module:
     - custom_add_another
 third_party_settings:
   custom_add_another:
     custom_add_another: ''
     custom_remove: ''
-id: node.city_service.field_topics
-field_name: field_topics
+id: node.page.field_audience
+field_name: field_audience
 entity_type: node
-bundle: city_service
-label: Topics
-description: 'Choose 1-3 topics that best describe this service. (Optional)'
+bundle: page
+label: Audience
+description: 'Choose 1 or 2 audiences that might be helped by this page. (Optional)'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      topics: topics
+      audience: audience
     sort:
       field: name
       direction: asc
