--- a/web/sites/default/config/field.storage.node.field_audience.yml
+++ b/web/sites/default/config/field.storage.node.field_audience.yml
@@ -3,8 +3,12 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
     - taxonomy
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.field_audience
 field_name: field_audience
 entity_type: node
