--- a/web/sites/default/config/field.storage.node.field_legacy_path.yml
+++ b/web/sites/default/config/field.storage.node.field_legacy_path.yml
@@ -3,7 +3,11 @@ langcode: en
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 id: node.field_legacy_path
 field_name: field_legacy_path
 entity_type: node
