--- a/web/sites/default/config/field.storage.node.field_page_type.yml
+++ b/web/sites/default/config/field.storage.node.field_page_type.yml
@@ -1,4 +1,4 @@
-uuid: 449b6603-985c-4aba-856c-494f82cde8ff
+uuid: 3459ec65-ac6e-43ab-b985-f5b72c10f784
 langcode: en
 status: true
 dependencies:
@@ -9,15 +9,15 @@ dependencies:
 third_party_settings:
   field_permissions:
     permission_type: public
-id: node.field_topics
-field_name: field_topics
+id: node.field_page_type
+field_name: field_page_type
 entity_type: node
 type: entity_reference
 settings:
   target_type: taxonomy_term
 module: core
 locked: false
-cardinality: -1
+cardinality: 1
 translatable: true
 indexes: {  }
 persist_with_no_fields: false
