--- a/web/sites/default/config/group.role.bureau_office-member.yml
+++ b/web/sites/default/config/group.role.bureau_office-member.yml
@@ -21,54 +21,56 @@ permissions:
   6: 'update own group_node:city_service entity'
   7: 'view group_node:city_service entity'
   8: 'view unpublished group_node:city_service entity'
-  11: 'delete own group_node:news entity'
-  12: 'update any group_node:news entity'
-  13: 'update own group_node:news entity'
-  14: 'view group_node:news entity'
-  15: 'view unpublished group_node:news entity'
-  17: 'delete own group_node:guide entity'
-  18: 'update any group_node:guide entity'
-  19: 'update own group_node:guide entity'
-  20: 'view group_node:guide entity'
-  21: 'view unpublished group_node:guide entity'
-  23: 'delete own group_node:information entity'
-  24: 'update any group_node:information entity'
-  25: 'update own group_node:information entity'
-  26: 'view group_node:information entity'
-  27: 'view unpublished group_node:information entity'
-  29: 'delete own group_node:event entity'
-  30: 'update any group_node:event entity'
-  31: 'update own group_node:event entity'
-  32: 'view group_node:event entity'
-  33: 'view unpublished group_node:event entity'
-  34: 'create group_media:document entity'
-  36: 'delete own group_media:document entity'
-  37: 'update any group_media:document entity'
-  38: 'update own group_media:document entity'
-  39: 'view group_media:document entity'
-  40: 'view unpublished group_media:document entity'
-  41: 'create group_media:image entity'
-  43: 'delete own group_media:image entity'
-  44: 'update any group_media:image entity'
-  45: 'update own group_media:image entity'
-  46: 'view group_media:image entity'
-  47: 'view unpublished group_media:image entity'
-  48: 'create group_media:video entity'
-  50: 'delete own group_media:video entity'
-  51: 'update any group_media:video entity'
-  52: 'update own group_media:video entity'
-  53: 'view group_media:video entity'
-  54: 'view unpublished group_media:video entity'
-  55: 'access group_media overview'
-  56: 'create group_node:notification entity'
-  58: 'delete own group_node:notification entity'
-  59: 'update any group_node:notification entity'
-  60: 'update own group_node:notification entity'
-  61: 'view group_node:notification entity'
-  62: 'view unpublished group_node:notification entity'
-  63: 'create group_media:audio entity'
-  65: 'delete own group_media:audio entity'
-  66: 'update any group_media:audio entity'
-  67: 'update own group_media:audio entity'
-  68: 'view group_media:audio entity'
-  69: 'view unpublished group_media:audio entity'
+  9: 'delete own group_node:news entity'
+  10: 'update any group_node:news entity'
+  11: 'update own group_node:news entity'
+  12: 'view group_node:news entity'
+  13: 'view unpublished group_node:news entity'
+  14: 'delete own group_node:guide entity'
+  15: 'update any group_node:guide entity'
+  16: 'update own group_node:guide entity'
+  17: 'view group_node:guide entity'
+  18: 'view unpublished group_node:guide entity'
+  22: 'view group_node:information entity'
+  24: 'delete own group_node:event entity'
+  25: 'update any group_node:event entity'
+  26: 'update own group_node:event entity'
+  27: 'view group_node:event entity'
+  28: 'view unpublished group_node:event entity'
+  29: 'create group_media:document entity'
+  30: 'delete own group_media:document entity'
+  31: 'update any group_media:document entity'
+  32: 'update own group_media:document entity'
+  33: 'view group_media:document entity'
+  34: 'view unpublished group_media:document entity'
+  35: 'create group_media:image entity'
+  36: 'delete own group_media:image entity'
+  37: 'update any group_media:image entity'
+  38: 'update own group_media:image entity'
+  39: 'view group_media:image entity'
+  40: 'view unpublished group_media:image entity'
+  41: 'create group_media:video entity'
+  42: 'delete own group_media:video entity'
+  43: 'update any group_media:video entity'
+  44: 'update own group_media:video entity'
+  45: 'view group_media:video entity'
+  46: 'view unpublished group_media:video entity'
+  47: 'access group_media overview'
+  48: 'create group_node:notification entity'
+  49: 'delete own group_node:notification entity'
+  50: 'update any group_node:notification entity'
+  51: 'update own group_node:notification entity'
+  52: 'view group_node:notification entity'
+  53: 'view unpublished group_node:notification entity'
+  54: 'create group_media:audio entity'
+  55: 'delete own group_media:audio entity'
+  56: 'update any group_media:audio entity'
+  57: 'update own group_media:audio entity'
+  58: 'view group_media:audio entity'
+  59: 'view unpublished group_media:audio entity'
+  110: 'create group_node:page entity'
+  111: 'delete own group_node:page entity'
+  112: 'update any group_node:page entity'
+  113: 'update own group_node:page entity'
+  114: 'view group_node:page entity'
+  115: 'view unpublished group_node:page entity'
