--- a/web/sites/default/config/group.role.elected_official-admin.yml
+++ b/web/sites/default/config/group.role.elected_official-admin.yml
@@ -12,87 +12,82 @@ audience: member
 group_type: elected_official
 permissions_ui: true
 permissions:
-  - 'edit group'
-  - 'view group'
-  - 'administer members'
-  - 'update own group_membership content'
-  - 'leave group'
-  - 'view group_membership content'
-  - 'access group_node overview'
-  - 'delete any group_node:news entity'
-  - 'delete own group_node:news entity'
-  - 'update any group_node:news entity'
-  - 'update own group_node:news entity'
-  - 'view group_node:news entity'
-  - 'view unpublished group_node:news entity'
-  - 'create group_node:news content'
-  - 'view group_node:news content'
-  - 'delete any group_node:guide entity'
-  - 'delete own group_node:guide entity'
-  - 'update any group_node:guide entity'
-  - 'update own group_node:guide entity'
-  - 'view group_node:guide entity'
-  - 'view unpublished group_node:guide entity'
-  - 'create group_node:guide content'
-  - 'view group_node:guide content'
-  - 'delete any group_node:information entity'
-  - 'delete own group_node:information entity'
-  - 'update any group_node:information entity'
-  - 'update own group_node:information entity'
-  - 'view group_node:information entity'
-  - 'view unpublished group_node:information entity'
-  - 'create group_node:information content'
-  - 'view group_node:information content'
-  - 'delete any group_node:event entity'
-  - 'delete own group_node:event entity'
-  - 'update any group_node:event entity'
-  - 'update own group_node:event entity'
-  - 'view group_node:event entity'
-  - 'view unpublished group_node:event entity'
-  - 'create group_node:event content'
-  - 'view group_node:event content'
-  - 'create group_node:notification entity'
-  - 'delete any group_node:notification entity'
-  - 'delete own group_node:notification entity'
-  - 'update any group_node:notification entity'
-  - 'update own group_node:notification entity'
-  - 'view group_node:notification entity'
-  - 'view unpublished group_node:notification entity'
-  - 'create group_node:notification content'
-  - 'view group_node:notification content'
-  - 'access group_media overview'
-  - 'create group_media:audio entity'
-  - 'delete any group_media:audio entity'
-  - 'delete own group_media:audio entity'
-  - 'update any group_media:audio entity'
-  - 'update own group_media:audio entity'
-  - 'view group_media:audio entity'
-  - 'view unpublished group_media:audio entity'
-  - 'create group_media:audio content'
-  - 'create group_media:document entity'
-  - 'delete any group_media:document entity'
-  - 'delete own group_media:document entity'
-  - 'update any group_media:document entity'
-  - 'update own group_media:document entity'
-  - 'view group_media:document entity'
-  - 'view unpublished group_media:document entity'
-  - 'create group_media:document content'
-  - 'view group_media:document content'
-  - 'create group_media:image entity'
-  - 'delete any group_media:image entity'
-  - 'delete own group_media:image entity'
-  - 'update any group_media:image entity'
-  - 'update own group_media:image entity'
-  - 'view group_media:image entity'
-  - 'view unpublished group_media:image entity'
-  - 'create group_media:image content'
-  - 'view group_media:image content'
-  - 'create group_media:video entity'
-  - 'delete any group_media:video entity'
-  - 'delete own group_media:video entity'
-  - 'update any group_media:video entity'
-  - 'update own group_media:video entity'
-  - 'view group_media:video entity'
-  - 'view unpublished group_media:video entity'
-  - 'create group_media:video content'
-  - 'view group_media:video content'
+  0: 'edit group'
+  1: 'view group'
+  2: 'administer members'
+  3: 'update own group_membership content'
+  4: 'leave group'
+  5: 'view group_membership content'
+  6: 'access group_node overview'
+  7: 'delete any group_node:news entity'
+  8: 'delete own group_node:news entity'
+  9: 'update any group_node:news entity'
+  10: 'update own group_node:news entity'
+  11: 'view group_node:news entity'
+  12: 'view unpublished group_node:news entity'
+  13: 'create group_node:news content'
+  14: 'view group_node:news content'
+  19: 'view group_node:guide entity'
+  27: 'view group_node:information entity'
+  31: 'delete any group_node:event entity'
+  32: 'delete own group_node:event entity'
+  33: 'update any group_node:event entity'
+  34: 'update own group_node:event entity'
+  35: 'view group_node:event entity'
+  36: 'view unpublished group_node:event entity'
+  37: 'create group_node:event content'
+  38: 'view group_node:event content'
+  39: 'create group_node:notification entity'
+  40: 'delete any group_node:notification entity'
+  41: 'delete own group_node:notification entity'
+  42: 'update any group_node:notification entity'
+  43: 'update own group_node:notification entity'
+  44: 'view group_node:notification entity'
+  45: 'view unpublished group_node:notification entity'
+  46: 'create group_node:notification content'
+  47: 'view group_node:notification content'
+  48: 'access group_media overview'
+  49: 'create group_media:audio entity'
+  50: 'delete any group_media:audio entity'
+  51: 'delete own group_media:audio entity'
+  52: 'update any group_media:audio entity'
+  53: 'update own group_media:audio entity'
+  54: 'view group_media:audio entity'
+  55: 'view unpublished group_media:audio entity'
+  56: 'create group_media:audio content'
+  57: 'create group_media:document entity'
+  58: 'delete any group_media:document entity'
+  59: 'delete own group_media:document entity'
+  60: 'update any group_media:document entity'
+  61: 'update own group_media:document entity'
+  62: 'view group_media:document entity'
+  63: 'view unpublished group_media:document entity'
+  64: 'create group_media:document content'
+  65: 'view group_media:document content'
+  66: 'create group_media:image entity'
+  67: 'delete any group_media:image entity'
+  68: 'delete own group_media:image entity'
+  69: 'update any group_media:image entity'
+  70: 'update own group_media:image entity'
+  71: 'view group_media:image entity'
+  72: 'view unpublished group_media:image entity'
+  73: 'create group_media:image content'
+  74: 'view group_media:image content'
+  75: 'create group_media:video entity'
+  76: 'delete any group_media:video entity'
+  77: 'delete own group_media:video entity'
+  78: 'update any group_media:video entity'
+  79: 'update own group_media:video entity'
+  80: 'view group_media:video entity'
+  81: 'view unpublished group_media:video entity'
+  82: 'create group_media:video content'
+  83: 'view group_media:video content'
+  154: 'create group_node:page entity'
+  155: 'delete any group_node:page entity'
+  156: 'delete own group_node:page entity'
+  157: 'update any group_node:page entity'
+  158: 'update own group_node:page entity'
+  159: 'view group_node:page entity'
+  160: 'view unpublished group_node:page entity'
+  161: 'create group_node:page content'
+  162: 'view group_node:page content'
