--- a/web/sites/default/config/group.role.program-admin.yml
+++ b/web/sites/default/config/group.role.program-admin.yml
@@ -12,96 +12,98 @@ audience: member
 group_type: program
 permissions_ui: true
 permissions:
-  - 'edit group'
-  - 'view group'
-  - 'administer members'
-  - 'update own group_membership content'
-  - 'leave group'
-  - 'view group_membership content'
-  - 'access group_node overview'
-  - 'create group_node:city_service entity'
-  - 'delete any group_node:city_service entity'
-  - 'delete own group_node:city_service entity'
-  - 'update any group_node:city_service entity'
-  - 'update own group_node:city_service entity'
-  - 'view group_node:city_service entity'
-  - 'view unpublished group_node:city_service entity'
-  - 'create group_node:city_service content'
-  - 'view group_node:city_service content'
-  - 'delete any group_node:news entity'
-  - 'delete own group_node:news entity'
-  - 'update any group_node:news entity'
-  - 'update own group_node:news entity'
-  - 'view group_node:news entity'
-  - 'view unpublished group_node:news entity'
-  - 'create group_node:news content'
-  - 'view group_node:news content'
-  - 'delete any group_node:guide entity'
-  - 'delete own group_node:guide entity'
-  - 'update any group_node:guide entity'
-  - 'update own group_node:guide entity'
-  - 'view group_node:guide entity'
-  - 'view unpublished group_node:guide entity'
-  - 'create group_node:guide content'
-  - 'view group_node:guide content'
-  - 'delete any group_node:information entity'
-  - 'delete own group_node:information entity'
-  - 'update any group_node:information entity'
-  - 'update own group_node:information entity'
-  - 'view group_node:information entity'
-  - 'view unpublished group_node:information entity'
-  - 'create group_node:information content'
-  - 'view group_node:information content'
-  - 'delete any group_node:event entity'
-  - 'delete own group_node:event entity'
-  - 'update any group_node:event entity'
-  - 'update own group_node:event entity'
-  - 'view group_node:event entity'
-  - 'view unpublished group_node:event entity'
-  - 'create group_node:event content'
-  - 'view group_node:event content'
-  - 'create group_node:notification entity'
-  - 'delete any group_node:notification entity'
-  - 'delete own group_node:notification entity'
-  - 'update any group_node:notification entity'
-  - 'update own group_node:notification entity'
-  - 'view group_node:notification entity'
-  - 'view unpublished group_node:notification entity'
-  - 'create group_node:notification content'
-  - 'view group_node:notification content'
-  - 'access group_media overview'
-  - 'create group_media:audio entity'
-  - 'delete any group_media:audio entity'
-  - 'delete own group_media:audio entity'
-  - 'update any group_media:audio entity'
-  - 'update own group_media:audio entity'
-  - 'view group_media:audio entity'
-  - 'view unpublished group_media:audio entity'
-  - 'create group_media:audio content'
-  - 'create group_media:document entity'
-  - 'delete any group_media:document entity'
-  - 'delete own group_media:document entity'
-  - 'update any group_media:document entity'
-  - 'update own group_media:document entity'
-  - 'view group_media:document entity'
-  - 'view unpublished group_media:document entity'
-  - 'create group_media:document content'
-  - 'view group_media:document content'
-  - 'create group_media:image entity'
-  - 'delete any group_media:image entity'
-  - 'delete own group_media:image entity'
-  - 'update any group_media:image entity'
-  - 'update own group_media:image entity'
-  - 'view group_media:image entity'
-  - 'view unpublished group_media:image entity'
-  - 'create group_media:image content'
-  - 'view group_media:image content'
-  - 'create group_media:video entity'
-  - 'delete any group_media:video entity'
-  - 'delete own group_media:video entity'
-  - 'update any group_media:video entity'
-  - 'update own group_media:video entity'
-  - 'view group_media:video entity'
-  - 'view unpublished group_media:video entity'
-  - 'create group_media:video content'
-  - 'view group_media:video content'
+  0: 'edit group'
+  1: 'view group'
+  2: 'administer members'
+  3: 'update own group_membership content'
+  4: 'leave group'
+  5: 'view group_membership content'
+  6: 'access group_node overview'
+  7: 'create group_node:city_service entity'
+  8: 'delete any group_node:city_service entity'
+  9: 'delete own group_node:city_service entity'
+  10: 'update any group_node:city_service entity'
+  11: 'update own group_node:city_service entity'
+  12: 'view group_node:city_service entity'
+  13: 'view unpublished group_node:city_service entity'
+  14: 'create group_node:city_service content'
+  15: 'view group_node:city_service content'
+  16: 'delete any group_node:news entity'
+  17: 'delete own group_node:news entity'
+  18: 'update any group_node:news entity'
+  19: 'update own group_node:news entity'
+  20: 'view group_node:news entity'
+  21: 'view unpublished group_node:news entity'
+  22: 'create group_node:news content'
+  23: 'view group_node:news content'
+  24: 'delete any group_node:guide entity'
+  25: 'delete own group_node:guide entity'
+  26: 'update any group_node:guide entity'
+  27: 'update own group_node:guide entity'
+  28: 'view group_node:guide entity'
+  29: 'view unpublished group_node:guide entity'
+  30: 'create group_node:guide content'
+  31: 'view group_node:guide content'
+  36: 'view group_node:information entity'
+  40: 'delete any group_node:event entity'
+  41: 'delete own group_node:event entity'
+  42: 'update any group_node:event entity'
+  43: 'update own group_node:event entity'
+  44: 'view group_node:event entity'
+  45: 'view unpublished group_node:event entity'
+  46: 'create group_node:event content'
+  47: 'view group_node:event content'
+  48: 'create group_node:notification entity'
+  49: 'delete any group_node:notification entity'
+  50: 'delete own group_node:notification entity'
+  51: 'update any group_node:notification entity'
+  52: 'update own group_node:notification entity'
+  53: 'view group_node:notification entity'
+  54: 'view unpublished group_node:notification entity'
+  55: 'create group_node:notification content'
+  56: 'view group_node:notification content'
+  57: 'access group_media overview'
+  58: 'create group_media:audio entity'
+  59: 'delete any group_media:audio entity'
+  60: 'delete own group_media:audio entity'
+  61: 'update any group_media:audio entity'
+  62: 'update own group_media:audio entity'
+  63: 'view group_media:audio entity'
+  64: 'view unpublished group_media:audio entity'
+  65: 'create group_media:audio content'
+  66: 'create group_media:document entity'
+  67: 'delete any group_media:document entity'
+  68: 'delete own group_media:document entity'
+  69: 'update any group_media:document entity'
+  70: 'update own group_media:document entity'
+  71: 'view group_media:document entity'
+  72: 'view unpublished group_media:document entity'
+  73: 'create group_media:document content'
+  74: 'view group_media:document content'
+  75: 'create group_media:image entity'
+  76: 'delete any group_media:image entity'
+  77: 'delete own group_media:image entity'
+  78: 'update any group_media:image entity'
+  79: 'update own group_media:image entity'
+  80: 'view group_media:image entity'
+  81: 'view unpublished group_media:image entity'
+  82: 'create group_media:image content'
+  83: 'view group_media:image content'
+  84: 'create group_media:video entity'
+  85: 'delete any group_media:video entity'
+  86: 'delete own group_media:video entity'
+  87: 'update any group_media:video entity'
+  88: 'update own group_media:video entity'
+  89: 'view group_media:video entity'
+  90: 'view unpublished group_media:video entity'
+  91: 'create group_media:video content'
+  92: 'view group_media:video content'
+  170: 'create group_node:page entity'
+  171: 'delete any group_node:page entity'
+  172: 'delete own group_node:page entity'
+  173: 'update any group_node:page entity'
+  174: 'update own group_node:page entity'
+  175: 'view group_node:page entity'
+  176: 'view unpublished group_node:page entity'
+  177: 'create group_node:page content'
+  178: 'view group_node:page content'
