--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -25,16 +25,8 @@ permissions:
   10: 'update own group_node:city_service entity'
   11: 'view group_node:city_service entity'
   12: 'view unpublished group_node:city_service entity'
-  13: 'delete own group_node:guide entity'
-  14: 'update any group_node:guide entity'
-  15: 'update own group_node:guide entity'
   16: 'view group_node:guide entity'
-  17: 'view unpublished group_node:guide entity'
-  18: 'delete own group_node:information entity'
-  19: 'update any group_node:information entity'
-  20: 'update own group_node:information entity'
   21: 'view group_node:information entity'
-  22: 'view unpublished group_node:information entity'
   23: 'delete own group_node:event entity'
   24: 'update any group_node:event entity'
   25: 'update own group_node:event entity'
@@ -71,4 +63,10 @@ permissions:
   56: 'view group_media:video entity'
   57: 'view unpublished group_media:video entity'
   58: 'access group_media overview'
-  86: 'access group_node overview'
+  59: 'access group_node overview'
+  106: 'create group_node:page entity'
+  107: 'delete own group_node:page entity'
+  108: 'update any group_node:page entity'
+  109: 'update own group_node:page entity'
+  110: 'view group_node:page entity'
+  111: 'view unpublished group_node:page entity'
