--- a/web/sites/default/config/workflows.workflow.editorial.yml
+++ b/web/sites/default/config/workflows.workflow.editorial.yml
@@ -11,6 +11,7 @@ dependencies:
     - node.type.information
     - node.type.news
     - node.type.notification
+    - node.type.page
     - node.type.service_location
   module:
     - content_moderation
@@ -92,5 +93,6 @@ type_settings:
       - information
       - news
       - notification
+      - page
       - service_location
   default_moderation_state: draft
