POWR-733 correct the search api page to not show form that is placed with block.

--- a/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
+++ b/web/sites/default/config/search_api_page.search_api_page.search_portland_gov.yml
@@ -22,10 +22,10 @@ searched_fields:
   title_1: title_1
 style: view_modes
 view_mode_configuration:
-  'entity:group_project': search_result
   'entity:group_bureau_office': search_result
   'entity:group_elected_official': search_result
   'entity:group_program': search_result
+  'entity:group_project': search_result
   'entity:node_city_service': search_result
   'entity:node_event': search_result
   'entity:node_guide': search_result
@@ -35,4 +35,4 @@ view_mode_configuration:
   'entity:taxonomy_term_audience': search_result
   'entity:taxonomy_term_community_actions': search_result
   'entity:taxonomy_term_topics': search_result
-show_search_form: true
+show_search_form: false
