POWR-687 Update theme libraries to point to new assets

--- a/web/themes/custom/cloudy/cloudy.libraries.yml
+++ b/web/themes/custom/cloudy/cloudy.libraries.yml
@@ -1,11 +1,9 @@
 global-styling:
   js:
-    js/popper.min.js: {}
-    js/bootstrap.min.js: {}
-    js/global.js: {}
+    js/main.bundle.js: {}
   css:
     component:
-      css/style.css: {}
+      css/style.bundle.css: {}
       https://use.fontawesome.com/releases/v5.2.0/css/all.css:
         type: external
         minified: true
