POWR-687 Update CircleCI config to remove Gulp language

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,16 +60,16 @@ behat_tests: &behat_tests
         paths:
           - "/tmp/vendor"
     - restore_cache:
-        name: Restore Gulp cache
+        name: Restore theme build asset cache
         keys:
-          - gulp_-{{ checksum "web/themes/custom/cloudy/package.json" }}
+          - cloudy_-{{ checksum "web/themes/custom/cloudy/package.json" }}
     - run:
-        name: Install Gulp
+        name: Install theme build tools
         command: |
           cd web/themes/custom/cloudy && npm install
     - save_cache:
-        name: Save Gulp cache
-        key: gulp_-{{ checksum "web/themes/custom/cloudy/package.json" }}
+        name: Save theme build asset cache
+        key: cloudy_-{{ checksum "web/themes/custom/cloudy/package.json" }}
         paths:
           - "web/themes/custom/cloudy/node_modules"
     - restore_cache: *restore_cache
