POWR-712 Add devel and kint to development modules split

--- a/web/sites/default/config/config_split.config_split.config_dev.yml
+++ b/web/sites/default/config/config_split.config_split.config_dev.yml
@@ -6,7 +6,9 @@ id: config_dev
 label: 'Development Modules'
 description: 'Modules that should only be enabled in development environments.'
 folder: sites/default/config_dev
-module: {  }
+module:
+  devel: 0
+  kint: 0
 theme: {  }
 blacklist: {  }
 graylist: {  }
