POWR-719 fixed issues found in PR: removed Body Content field from Guide and Information, reverted a moderation dashboard and lighting scheduler config that had gotten changed somehow, added LinkIT to Simplified Editor with Media Embed.

--- a/web/sites/default/config/core.entity_view_display.node.guide.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.guide.default.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.field.node.guide.field_body
-    - field.field.node.guide.field_body_content
     - field.field.node.guide.field_legacy_path
     - field.field.node.guide.field_related_content
     - field.field.node.guide.field_reviewer
@@ -13,8 +12,8 @@ dependencies:
     - node.type.guide
   module:
     - ds
+    - entity_reference_revisions
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -32,18 +31,20 @@ third_party_settings:
     regions:
       content:
         - field_summary
-        - field_body_content
+        - field_body
 id: node.guide.default
 targetEntityType: node
 bundle: guide
 mode: default
 content:
-  field_body_content:
-    type: text_default
+  field_body:
+    type: entity_reference_revisions_entity_view
     weight: 1
     region: content
     label: hidden
-    settings: {  }
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
   field_summary:
     weight: 0
@@ -83,7 +84,6 @@ content:
     region: content
 hidden:
   content_moderation_control: true
-  field_body: true
   field_legacy_path: true
   field_related_content: true
   field_reviewer: true
