--- a/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/editor.editor.simplified_editor_with_media_embed.yml
@@ -19,7 +19,6 @@ settings:
             - Italic
             - Blockquote
             - Format
-            - Styles
         -
           name: Lists
           items:
@@ -28,7 +27,7 @@ settings:
         -
           name: Links
           items:
-            - DrupalLink
+            - Linkit
             - DrupalUnlink
         -
           name: Media
@@ -54,7 +53,7 @@ settings:
     stylescombo:
       styles: ''
     linkit:
-      linkit_profile: ''
+      linkit_profile: powr
 image_upload:
   status: false
   scheme: public
