--- a/web/sites/default/config/core.entity_view_display.node.information.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.information.default.yml
@@ -4,14 +4,13 @@ status: true
 dependencies:
   config:
     - field.field.node.information.field_body
-    - field.field.node.information.field_body_content
     - field.field.node.information.field_legacy_path
     - field.field.node.information.field_summary
     - node.type.information
   module:
     - ds
+    - entity_reference_revisions
     - panelizer
-    - text
     - user
 third_party_settings:
   panelizer:
@@ -30,7 +29,7 @@ third_party_settings:
       content:
         - content_moderation_control
         - field_summary
-        - field_body_content
+        - field_body
 id: node.information.default
 targetEntityType: node
 bundle: information
@@ -41,13 +40,15 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_body_content:
+  field_body:
+    type: entity_reference_revisions_entity_view
     weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
     region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
   field_summary:
     weight: 1
     label: hidden
@@ -85,7 +86,6 @@ content:
     type: string
     region: content
 hidden:
-  field_body: true
   field_legacy_path: true
   links: true
   scheduled_publication: true
