POWR-725 initial config of new fields and view. Saving my work.

--- a/composer.json
+++ b/composer.json
@@ -166,7 +166,11 @@
                 "2948260 - Tokens not substituted in query string": "https://www.drupal.org/files/issues/2018-09-21/2988939-allow-query-parameters-12.diff"
             },
             "drupal/easy_breadcrumb": {
-                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"            }
+                "2979389 - Titles in breadcrumbs are 'double-escaped'": "https://www.drupal.org/files/issues/2018-06-21/2979389-7-easy-breadcrumb--double-escaped-titles.patch"            
+            },
+            "drupal/conditional_fields": {
+                "2834358 - 'Uninitialized string offset: 0 in conditional_fields_evaluate_dependency()' when saving node form with conditional fields applied": "https://www.drupal.org/files/issues/conditional_fields-uninitialized_string_offset_in_conditional_fields_evaluate_dependency-2834358-11.patch"
+            }
         },
         "merge-plugin": {
             "include": [
