--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -4,13 +4,19 @@ status: true
 dependencies:
   config:
     - field.field.node.news.field_body
+    - field.field.node.news.field_feature_this_content
+    - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_image
     - field.field.node.news.field_legacy_path
+    - field.field.node.news.field_published_on
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
     - node.type.news
   module:
+    - datetime
     - ds
     - entity_reference_revisions
+    - image
     - panelizer
     - user
 third_party_settings:
@@ -43,6 +49,43 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_feature_this_content:
+    weight: 2
+    label: above
+    settings:
+      format: default
+      format_custom_false: ''
+      format_custom_true: ''
+    third_party_settings: {  }
+    type: boolean
+    region: content
+  field_feature_until:
+    weight: 3
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_featured_image:
+    weight: 4
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_published_on:
+    weight: 5
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
     region: content
   field_summary:
     weight: 0
