POWR-699 - enabled Company in Address field for paragraph, bureau, elected official, and program

--- a/web/sites/default/config/field.field.group.elected_official.field_address.yml
+++ b/web/sites/default/config/field.field.group.elected_official.field_address.yml
@@ -34,7 +34,7 @@ settings:
     familyName:
       override: hidden
     organization:
-      override: hidden
+      override: optional
     sortingCode:
       override: hidden
     dependentLocality:
