--- a/web/sites/default/config/field.field.group.program.field_address.yml
+++ b/web/sites/default/config/field.field.group.program.field_address.yml
@@ -48,7 +48,7 @@ settings:
     familyName:
       override: hidden
     organization:
-      override: hidden
+      override: optional
     addressLine1:
       override: optional
     addressLine2:
