--- a/web/sites/default/config/field.field.paragraph.address.field_address.yml
+++ b/web/sites/default/config/field.field.paragraph.address.field_address.yml
@@ -20,7 +20,21 @@ label: Address
 description: 'Enter an address.'
 required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    country_code: US
+    langcode: null
+    administrative_area: ''
+    locality: ''
+    dependent_locality: ''
+    postal_code: ''
+    sorting_code: ''
+    address_line1: ''
+    address_line2: ''
+    organization: ''
+    given_name: ''
+    additional_name: ''
+    family_name: ''
 default_value_callback: ''
 settings:
   available_countries:
@@ -34,7 +48,7 @@ settings:
     familyName:
       override: hidden
     organization:
-      override: hidden
+      override: optional
     addressLine2:
       override: optional
     sortingCode:
