--- a/web/sites/default/config/field.field.group.bureau_office.field_address.yml
+++ b/web/sites/default/config/field.field.group.bureau_office.field_address.yml
@@ -48,7 +48,7 @@ settings:
     familyName:
       override: hidden
     organization:
-      override: hidden
+      override: optional
     sortingCode:
       override: hidden
     dependentLocality:
