POWR-725 a few more tweaks to the view and the creation of the featured display mode

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -1,8 +1,9 @@
-uuid: 5686f5ec-0a1a-463c-b721-0bebba6cd10c
+uuid: 809179c8-a318-4159-98b5-ba9717dedec7
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.news.field_body
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
@@ -13,7 +14,6 @@ dependencies:
     - field.field.node.news.field_topics
     - node.type.news
   module:
-    - ds
     - entity_reference_revisions
     - panelizer
     - user
@@ -23,21 +23,10 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-  ds:
-    layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
-      disable_css: false
-      entity_classes: all_classes
-      settings: {  }
-    regions:
-      content:
-        - field_summary
-        - field_body
-id: node.news.default
+id: node.news.featured
 targetEntityType: node
 bundle: news
-mode: default
+mode: featured
 content:
   field_body:
     weight: 1
@@ -45,15 +34,7 @@ content:
     settings:
       view_mode: default
       link: ''
-    third_party_settings:
-      ds:
-        ds_limit: ''
-        ft:
-          id: default
-          settings:
-            lb: ''
-            lb-col: false
-            classes: {  }
+    third_party_settings: {  }
     type: entity_reference_revisions_entity_view
     region: content
   field_summary:
