POWR-725 updates to page manager page, view, and layouts

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -12,9 +12,11 @@ dependencies:
     - field.field.node.news.field_published_on
     - field.field.node.news.field_summary
     - field.field.node.news.field_topics
+    - image.style.medium
     - node.type.news
   module:
-    - entity_reference_revisions
+    - ds
+    - image
     - panelizer
     - user
 third_party_settings:
@@ -23,22 +25,67 @@ third_party_settings:
     custom: false
     allow: false
     default: default
+  ds:
+    layout:
+      id: cloudy_image-right
+      library: null
+      disable_css: false
+      entity_classes: all_classes
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
+    regions:
+      first:
+        - node_title
+        - field_summary
+      second:
+        - field_featured_image
+    fields:
+      node_title:
+        plugin_id: node_title
+        weight: 0
+        label: hidden
+        formatter: default
+        settings:
+          link: true
+          wrapper: h3
+          class: ''
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
 id: node.news.featured
 targetEntityType: node
 bundle: news
 mode: featured
 content:
-  field_body:
-    weight: 1
+  field_featured_image:
+    type: image
+    weight: 2
+    region: second
     label: hidden
     settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
+      image_style: medium
+      image_link: content
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
@@ -57,7 +104,7 @@ content:
             ow-at: ''
             fis: true
             fis-el: p
-            fis-cl: lead
+            fis-cl: order-3
             fis-at: ''
             fi-el: ''
             fi-cl: ''
@@ -72,12 +119,12 @@ content:
             fi: false
             fi-def-at: false
     type: string
-    region: content
+    region: first
 hidden:
   content_moderation_control: true
+  field_body: true
   field_feature_this_content: true
   field_feature_until: true
-  field_featured_image: true
   field_legacy_path: true
   field_published_on: true
   field_topics: true
