--- a/web/sites/default/config/field.field.node.news.field_feature_until.yml
+++ b/web/sites/default/config/field.field.node.news.field_feature_until.yml
@@ -18,7 +18,7 @@ entity_type: node
 bundle: news
 label: 'Feature until'
 description: ''
-required: true
+required: false
 translatable: false
 default_value:
   -
