--- a/web/sites/default/config/easy_breadcrumb.settings.yml
+++ b/web/sites/default/config/easy_breadcrumb.settings.yml
@@ -1,4 +1,4 @@
-include_home_segment: false
+include_home_segment: true
 home_segment_title: Home
 home_segment_keep: 0
 include_title_segment: false
@@ -6,7 +6,7 @@ language_path_prefix_as_segment: false
 use_menu_title_as_fallback: false
 remove_repeated_segments: true
 absolute_paths: false
-hide_single_home_item: false
+hide_single_home_item: true
 _core:
   default_config_hash: ALaJtTMWaPkrzRKrWM1z4u7BslSR_0tTzlGXfeZPhDQ
 include_invalid_paths: false
