--- a/web/sites/default/config/field.field.node.news.field_featured_image.yml
+++ b/web/sites/default/config/field.field.node.news.field_featured_image.yml
@@ -18,7 +18,7 @@ entity_type: node
 bundle: news
 label: 'Featured image'
 description: 'Featured images allow you to highlight your content in lists and also create a header above your content title.'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
