POWR-725 finalize a display mode and layout

--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -27,7 +27,7 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: cloudy_image-right
+      id: cloudy_featured-with-image
       library: null
       disable_css: false
       entity_classes: all_classes
