--- a/composer.json
+++ b/composer.json
@@ -69,6 +69,7 @@
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
+        "drupal/menu_breadcrumb": "^1.7",
         "drupal/openid_connect": "^1.0@beta",
         "drupal/page_manager": "^4.0@beta",
         "drupal/pantheon_advanced_page_cache": "^1.0",
