--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -1,72 +1,10 @@
-cloudy_cardbasic:
-  label: Card basic
+cloudy_featured-with-image:
+  label: Featured with image
   category: Cloudy
-  template: templates/ds/layout--ds-card-basic
+  template: templates/ds/layout--ds-featured-with-image
   class: '\Drupal\ds\Plugin\DsLayout'
   regions:
     first:
       label: Content
-cloudy_cardtopimage:
-  label: Card top image
-  category: Cloudy
-  template: templates/ds/layout--ds-card-top-image
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Image
-    second:
-      label: Content
-cloudy_cardimageoverlay:
-  label: Card image overlay
-  category: Cloudy
-  template: templates/ds/layout--ds-card-image-overlay
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Image
-    second:
-      label: Content
-cloudy_cardheaderfooter:
-  label: Card header footer
-  category: Cloudy
-  template: templates/ds/layout--ds-card-header-footer
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Header
-    second:
-      label: Content
-    third:
-      label: Footer
-cloudy_image-right:
-  label: Card image right
-  category: Cloudy
-  template: templates/ds/layout--ds-card-image-right
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: First
     second:
       label: Image
-cloudy_card3stack:
-  label: Card three block stacked
-  category: Cloudy
-  template: templates/ds/layout--ds-card-3stack
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: First
-    second:
-      label: Image
-    third:
-      label: Second
-cloudy_media:
-  label: Media
-  category: Cloudy
-  template: templates/ds/layout--ds-media
-  class: '\Drupal\ds\Plugin\DsLayout'
-  regions:
-    first:
-      label: Image
-    second:
-      label: Content
