POWR-725 final edits to news block and block layout changes before PR

--- a/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__categories_on_a_node_block_1.yml
@@ -6,6 +6,7 @@ dependencies:
     - views.view.categories_on_a_node
   module:
     - node
+    - system
     - views
   theme:
     - cloudy
@@ -27,13 +28,18 @@ visibility:
   node_type:
     id: node_type
     bundles:
-      city_service: city_service
-      guide: guide
       alert: alert
+      city_service: city_service
       event: event
+      guide: guide
       information: information
       news: news
       notification: notification
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
+  request_path:
+    id: request_path
+    pages: '/node/*/*'
+    negate: true
+    context_mapping: {  }
