--- a/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
+++ b/web/sites/default/config/block.block.views_block__group_projects_block_1.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.group_projects
   module:
+    - system
     - views
   theme:
     - cloudy
@@ -22,4 +23,9 @@ settings:
   views_label: ''
   items_per_page: none
   context_mapping: {  }
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: 'group/*/*'
+    negate: true
+    context_mapping: {  }
