--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -47,27 +47,27 @@ third_party_settings:
           settings:
             lb: Updated
             prefix: ''
-            lbw-el: ''
-            lbw-cl: ''
+            lbw: true
+            lbw-el: div
+            lbw-cl: 'd-inline mr-2'
             lbw-at: ''
             ow: true
             ow-el: div
-            ow-cl: 'muted small'
+            ow-cl: 'muted small d-flex'
             ow-at: ''
             fis-el: ''
             fis-cl: ''
             fis-at: ''
-            fi-el: ''
-            fi-cl: ''
+            fi: true
+            fi-el: div
+            fi-cl: d-inline
             fi-at: ''
             suffix: ''
-            lbw: false
             lb-col: false
             ow-def-at: false
             ow-def-cl: false
             fis: false
             fis-def-at: false
-            fi: false
             fi-def-at: false
       node_title:
         plugin_id: node_title
