--- a/web/sites/default/config/page_manager.page.group_homepage.yml
+++ b/web/sites/default/config/page_manager.page.group_homepage.yml
@@ -1,6 +1,6 @@
 uuid: 55acea5e-45f2-4e39-a752-46a17c75d2b2
 langcode: en
-status: true
+status: false
 dependencies: {  }
 id: group_homepage
 label: 'Group Homepage'
