--- a/web/sites/default/config/system.menu.site-map.yml
+++ b/web/sites/default/config/system.menu.site-map.yml
@@ -3,6 +3,6 @@ langcode: en
 status: true
 dependencies: {  }
 id: site-map
-label: 'Site map'
+label: 'Bureaus, offices, and programs'
 description: 'A high level menu of all groups on Portland.gov'
 locked: false
